objects/nFORCE__Field_Extension__mdt.object
<CustomObject>
    <description>This object stores a list of fields that require masking and specifies the masking method.</description>
    <fields>
        <fullName>nFORCE__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is manually populated. When enabled, it indicates that this field extension is active. When disabled, the field extension is not active. By default, it is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Field_Name__c</fullName>
        <description>This field is required. It is manually populated. This field stores the name of the field being extended.</description>
        <label>Field Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Mask_Type__c</fullName>
        <description>The field is required. It is manually populated. It indicates the type of masking that must be applied to the field when displayed to an user. This impacts all users regardless of permission.</description>
        <label>Masking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Last 4 in Clear</fullName>
                </value>
                <value>
                    <fullName>Mask All Characters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Object_Name__c</fullName>
        <description>This field is required. It is manually populated. This field indicates the fully qualified name of the object for the field which the extension applies.</description>
        <label>Object Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Field Extension</label>
    <pluralLabel>Field Extension</pluralLabel>
</CustomObject>